--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,9 +11,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/861591?v=4",
       "profile": "http://flanusse.net",
       "contributions": [
-        "infra",
-        "test",
-        "code"
+        "design",
       ]
     }
   ],
