--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,10 +31,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install jax==0.4.35
         pip install numpy setuptools cython wheel
-        pip install git+https://github.com/MP-Gadget/pfft-python
-        pip install git+https://github.com/MP-Gadget/pmesh
-        pip install git+https://github.com/ASKabalan/fastpm-python --no-build-isolation
-        pip install .[test]
+        pip install .[test] --no-build-isolation
 
     - name: Run Single Device Tests
       run: |
