--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install jax==0.4.35
         pip install numpy setuptools cython wheel
-        pip install .[test] --no-build-isolation
+        pip install git+https://github.com/MP-Gadget/pfft-python
+        pip install git+https://github.com/MP-Gadget/pmesh
+        pip install git+https://github.com/ASKabalan/fastpm-python --no-build-isolation
+        pip install .[test]
 
     - name: Run Single Device Tests
       run: |
