--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "JaxPM"
+name = "jaxpm"
 dynamic = ["version"]
 description = "A simple Particle-Mesh implementation in JAX"
 authors = [{ name = "JaxPM developers" }]
