--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "JaxPM"
+name = "jaxpm"
 dynamic = ["version"]
 description = "A simple Particle-Mesh implementation in JAX"
 authors = [{ name = "JaxPM developers" }]
@@ -12,19 +12,6 @@ requires-python = ">=3.9"
 license = { file = "LICENSE" }
 urls = { "Homepage" = "https://github.com/DifferentiableUniverseInitiative/JaxPM" }
 dependencies = ["jax_cosmo", "jax>=0.4.30", "jaxdecomp>=0.2.2"]
-
-[project.optional-dependencies]
-test = [
-    "jax>=0.4.30",
-    "numpy",
-    "jax_cosmo",
-    "jaxdecomp>=0.2.2",
-    "pytest>=8.0.0",
-    "pfft-python @ git+https://github.com/MP-Gadget/pfft-python",
-    "pmesh @ git+https://github.com/MP-Gadget/pmesh",
-    "fastpm @ git+https://github.com/ASKabalan/fastpm-python",
-    "diffrax"
-]
 
 [tool.setuptools]
 packages = ["jaxpm"]
