--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,12 +29,11 @@ jobs:
       run: |
         sudo apt-get install -y libopenmpi-dev
         python -m pip install --upgrade pip
+        pip install numpy setuptools cython wheel
+        pip install -r requirements-test.txt  --no-build-isolation
         pip install jax
-        pip install setuptools cython wheel
-        pip install git+https://github.com/MP-Gadget/pfft-python
-        pip install git+https://github.com/MP-Gadget/pmesh
-        pip install git+https://github.com/ASKabalan/fastpm-python --no-build-isolation
-        pip install -r requirements-test.txt
+        pip install pytest>=8.0.0
+        pip install diffrax
         pip install .
 
     - name: Run Single Device Tests
