--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         sudo apt-get install -y libopenmpi-dev
         python -m pip install --upgrade pip
-        pip install numpy setuptools cython wheel mpi4py
+        pip install numpy==2.2.6 setuptools cython wheel mpi4py
         pip install -r requirements-test.txt  --no-build-isolation
         pip install jax
         pip install pytest>=8.0.0
