--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,3 +2,4 @@ pfft-python @ git+https://github.com/MP-Gadget/pfft-python
 pmesh @ git+https://github.com/MP-Gadget/pmesh
 fastpm @ git+https://github.com/ASKabalan/fastpm-python
 numpy==2.2.6
+diffrax
