add glass[examples] to requirements-test.txt

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,3 +3,4 @@ pmesh @ git+https://github.com/MP-Gadget/pmesh
 fastpm @ git+https://github.com/ASKabalan/fastpm-python
 numpy==2.2.6
 diffrax
+glass[examples]
