--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,15 @@ dependencies = [
   "jax_cosmo",
   "jax>=0.4.35",
   "jaxdecomp>=0.2.8",
-  "jax-healpy @ git+https://github.com/CMBSciPol/jax-healpy@main"
+  "jax-healpy>=0.5.0"
 ]
+
+[project.optional-dependencies]
+test = [
+  "pytest",
+  "diffrax"
+]
+
 [tool.setuptools]
 packages = ["jaxpm"]
 
