added a prototype of RBF kernel (#46)
* Add three painting schemes: NGP, bi-linear and RBF with Neighbor using jhp

* small fix in growth.py

* Add comprehensive tests for spherical painting methods
Comparing against limber theory cl

* add jax-healpy as dependency

* add healpy to test requirements

* add grad and jit tests for spherical painting methods

* bump jaxdecomp version for shardy support

* Remove weighted normalization checks

* Add case-insensitivity to the 'method' argument in the paint_spherical function.

* add -s for test paramter to check workflow faliure

* Deactivate RBF neighbor method for differentiability testing for github workflow

* update smoothing scale parameter to be physically meaningful

* update pyproject test deps

* Add a notebook to showcase spherical painting methods and their power spectra.

* update ud_grade parameter in tests

* Update colab badge link in 07-Spherical_Painting_Methods.ipynb

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,17 +55,15 @@ jobs:
         pip install setuptools cython mpi4py
         # Install test requirements with no-build-isolation for faster builds
         pip install -r requirements-test.txt --no-build-isolation
-        # Install additional test dependencies
-        pip install pytest diffrax
-        # Install package in development mode
-        pip install -e .
+        # Install packages with test dependencies
+        pip install -e .[test]
         echo "numpy version installed:"
         python -c "import numpy; print(numpy.__version__)"
 
     - name: Run Single Device Tests
       run: |
         cd tests
-        pytest -v -m "not distributed"
+        pytest -v -s -m "not distributed"
 
     - name: Run Distributed tests
       run: |
