--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,18 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = { file = "LICENSE" }
 urls = { "Homepage" = "https://github.com/DifferentiableUniverseInitiative/JaxPM" }
-dependencies = ["jax_cosmo", "jax>=0.4.35", "jaxdecomp>=0.2.3"]
+dependencies = [
+  "jax_cosmo",
+  "jax>=0.4.35",
+  "jaxdecomp>=0.2.8",
+  "jax-healpy>=0.5.0"
+]
+
+[project.optional-dependencies]
+test = [
+  "pytest",
+  "diffrax"
+]
 
 [tool.setuptools]
 packages = ["jaxpm"]
